--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
+    "composition": "parcel src/composition.html",
     "build": "parcel build src/index.html"
   },
   "keywords": [],
@@ -15,12 +16,14 @@
     "@vue/component-compiler-utils": "^3.2.0",
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2",
-    "sass": "^1.32.8",
+    "sass": "^1.32.10",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "core-js": "^3.10.1",
     "event-emitter": "^0.3.5",
+    "highcharts": "^9.0.1",
+    "highcharts-vue": "^1.3.5",
     "regenerator-runtime": "^0.13.7",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4"
