--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highcharts-vue": "^1.3.5",
     "regenerator-runtime": "^0.13.7",
     "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-router": "^3.5.1"
   }
 }
