--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
+    "@vue/composition-api": "^1.0.0-rc.7",
     "parcel-bundler": "^1.12.5",
     "pug": "^3.0.2",
     "sass": "^1.32.10",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
+    "@vueform/multiselect": "^1.4.0",
     "core-js": "^3.10.1",
     "event-emitter": "^0.3.5",
     "highcharts": "^9.0.1",
